--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,24 +10,12 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Absence Clothing - Unique T-Shirts">
     <meta property="og:description" content="Explore our exclusive range of high-quality t-shirts from Absence Brand. Perfect for any occasion.">
-    <meta property="og:image" content="https://absencemain.vercel.app/images/hero_image.jpg">
-    <meta property="og:url" content="https://absencemain.vercel.app">
+    <!-- <meta property="og:image" content="https://absencemain.vercel.app/images/hero_image.jpg"> -->
+    <meta property="og:url" content="https://absense.fashion.mahitechnocrafts.in">
     <meta property="og:type" content="website">
 
     <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Product",
-        "name": "Absence T-Shirt",
-        "image": "https://absencemain.vercel.app/images/product_image.jpg",
-        "description": "High-quality t-shirt with a unique design from Absence Brand.",
-        "brand": {
-          "@type": "Brand",
-          "name": "Absence"
-        }
-      }
-    </script>
+  
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
