--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,34 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+    <!-- Google Tag Manager -->
+    <!-- <script async>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-N4D5GB4');
+    </script> -->
+    <!-- End Google Tag Manager -->
+
+
+
+
+
+
+
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
-    <meta name="description" content="Discover the latest collection of Absence Clothing. High-quality t-shirts with unique designs from Absence Brand.">
-    <meta name="keywords" content="Absence, Absence Clothing, Absence Brand, t-shirts, fashion, high-quality, unique designs">
+    <meta name="description"
+        content="Discover the latest collection of Absence Clothing. High-quality t-shirts with unique designs from Absence Brand.">
+    <meta name="keywords"
+        content="Absence, Absence Clothing, Absence Brand, t-shirts, fashion, high-quality, unique designs">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Absence Clothing - Unique T-Shirts">
-    <meta property="og:description" content="Explore our exclusive range of high-quality t-shirts from Absence Brand. Perfect for any occasion.">
-    <!-- <meta property="og:image" content="https://absencemain.vercel.app/images/hero_image.jpg"> -->
+    <meta property="og:title" content="ABSENCE - Unique T-Shirts">
+    <meta property="og:description"
+        content="Explore our exclusive range of high-quality t-shirts from Absence Brand. Perfect for any occasion.">
+    <!-- <meta property="og:image" content="https://absense.fashion.mahitechnocrafts.in/images/hero_image.jpg"> -->
     <meta property="og:url" content="https://absense.fashion.mahitechnocrafts.in">
     <meta property="og:type" content="website">
 
-    <!-- Structured Data for SEO -->
-  
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Absence",
+          "url": "https://absense.fashion.mahitechnocrafts.in",
+          "description": "Official website for Absence Brand, featuring high-quality apparel and unique designs.",
+          "publisher": {
+            "@type": "Organization",
+            "name": "Absence",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://absense.fashion.mahitechnocrafts.in/images/logo.png",
+              "width": 250,
+              "height": 100
+            }
+          }
+        }
+        </script>
+
+
+  <!-- Icons and Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- FONT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <title>Absence</title>
 </head>
+
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
+
 </html>
