--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
     <meta property="og:description"
         content="Explore our exclusive range of high-quality t-shirts from Absence Brand. Perfect for any occasion.">
     <!-- <meta property="og:image" content="https://absense.fashion.mahitechnocrafts.in/images/hero_image.jpg"> -->
-    <meta property="og:url" content="https://absense.fashion.mahitechnocrafts.in">
+    <meta property="og:url" content="https://wearabsence.com/">
     <meta property="og:type" content="website">
 
 
@@ -47,14 +47,14 @@
           "@context": "https://schema.org",
           "@type": "WebSite",
           "name": "Absence",
-          "url": "https://absense.fashion.mahitechnocrafts.in",
+          "url": "https://wearabsence.com/",
           "description": "Official website for Absence Brand, featuring high-quality apparel and unique designs.",
           "publisher": {
             "@type": "Organization",
             "name": "Absence",
             "logo": {
               "@type": "ImageObject",
-              "url": "https://absense.fashion.mahitechnocrafts.in/images/logo.png",
+              "url": "https://wearabsence.com/images/logo.png",
               "width": 250,
               "height": 100
             }
