--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,10 +29,10 @@
     <meta name="description"
         content="Discover the latest collection of Absence Clothing. High-quality t-shirts with unique designs from Absence Brand.">
     <meta name="keywords"
-        content="Absence, Absence Clothing, Absence Brand, t-shirts, fashion, high-quality, unique designs">
+        content="Absence, Wear Absence, wear absence, Absence Clothing, Absence Brand, t-shirts, fashion, high-quality, unique designs">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="ABSENCE - Unique T-Shirts">
+    <meta property="og:title" content="ABSENCE - Wear Absence">
     <meta property="og:description"
         content="Explore our exclusive range of high-quality t-shirts from Absence Brand. Perfect for any occasion.">
     <!-- <meta property="og:image" content="https://absense.fashion.mahitechnocrafts.in/images/hero_image.jpg"> -->
@@ -84,7 +84,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <title>Absence</title>
+    <title>Wear Absence</title>
 </head>
 
 <body>
