--- a/client/public/index.html
+++ b/client/public/index.html
@@ -47,7 +47,7 @@
           "@type": "WebSite",
           "name": "Absence",
           "url": "https://wearabsence.com/",
-          "description": "Official website for Absence Brand, featuring high-quality apparel and unique designs.",
+          "description": "Official website for Wear Absence Brand, featuring high-quality apparel and unique designs. At Wear Absence",
           "publisher": {
             "@type": "Organization",
             "name": "Absence",
